# ochannel-ssp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  context_types.cpp  context_types.h  exports.def  genmock.cpp  httpclient.cpp  httpclient.h  httpclient_nettest.cpp  httpclient_test.cpp  mockssl.cpp  mockssl.h  mocktest.cpp  opensslclient.cpp  opensslclient.h  opensslclient_test.cpp  ssl-mocked-functions.txt  ssp.cpp
docker/: linux.Dockerfile  mingw.Dockerfile
openssl-sspi/: CMakeLists.txt  openssl-sspi.cpp  openssl-sspi.h  openssl-test.cpp  openssl-test.h  scope_guard.hpp
